<resources>
    <string name="app_name">Can I Watch It</string>
    <string name="user_score">%1.1f/10</string>
    <string name="plot_overview_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="streaming_source_image_content_description">Plataforma de suscripción disponible en España.</string>
    <string name="explicit_search_hint">¿Qué te apetece ver hoy? 💭</string>
    <string name="title_has_no_streaming_sources">No disponible en ninguna plataforma</string>
    <string name="select_at_least_one_streaming_source">Debes seleccionar al menos una plataforma de streaming</string>
    <string name="search_hint">Powered by Watchmode.com</string>
    <string name="no_titles_found">No se ha encontrado ningún título</string>
    <string name="search">Buscar</string>
    <string name="streaming_platforms">Plataformas</string>
    <string name="in_line_separator">|</string>
    <string name="app_update_status">Recuperando información del repositorio…</string>
    <string name="cancel">Cancelar</string>
    <string name="update">Actualizar</string>
    <string name="dialog_app_update_title">Gestor de actualizaciones</string>
    <string name="dismiss">Omitir</string>
    <string name="new_version_available">Nueva versión disponible: %1$s</string>
    <string name="update_status_error">%1$s Puedes cerrar este diálogo pulsando fuera de él.</string>
    <string name="update_status_exception">Error al comprobar actualizaciones. Inténtalo más tarde.\nPuedes cerrar este diálogo pulsando fuera de él.</string>
    <string name="update_status_downloading">Descargando actualización…</string>
    <string name="update_status_installing">Abriendo instalador…</string>
    <string name="unknown_error">Se ha producido un error: %1$s\n</string>
    <string name="app_version_name">v%1$s</string>
    <string name="platform">Plataforma</string>
    <string name="information_for_network_sources">ℹ️ Ten en cuenta\n\nLas plataformas de streaming que aparecen a continuación pueden no reflejar aquellas disponibles en Watchmode.</string>
    <string name="enable_javascript_message">Conectando a:\n%1$s\n\n¿Desea activar JavaScript para la vista web? Este ajuste no es persistente.\n\nℹ️ JavaScript permite funcionalidades como la reproducción de vídeo.</string>
    <string name="enable_javascript_title">Vista Web</string>
    <string name="activate">Activar</string>
    <string name="unable_to_open_url">No ha sido posible abrir el enlace: %1$s</string>
    <string name="deny">Denegar</string>
    <string name="update_info_incomplete">La información del paquete de actualización está incompleta</string>
    <string name="query_limit_reached">Has superado el límite de búsquedas diarias (%1$d).</string>
    <string name="unable_to_fetch_sources">No ha sido posible recuperar las plataformas de streaming.</string>
    <string name="loading_brain">Loading brain</string>
</resources>