<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/md_theme_primaryContainer">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="start"
            android:textColor="@color/md_theme_onPrimaryContainer"
            android:text="@string/dialog_app_update_title"/>

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tvUpdateStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:textSize="14sp"
            android:textColor="@color/md_theme_onPrimaryContainer"
            android:text="@string/app_update_status"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/dismiss"
                android:textColor="#00695C" />

            <Button
                android:id="@+id/btnUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="#00695C" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>