<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_secondaryContainer"
    tools:context=".ui.view.fragments.SearchFragment">


    <EditText
        android:id="@+id/etTitleToSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:selectAllOnFocus="true"
        android:focusable="true"
        android:hint="@string/search_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/lLayoutSubscribedStreamingSources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/md_theme_secondary80"
        android:orientation="vertical"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitleToSearch">

        <include
            android:id="@+id/streamingSourcesDisplayer"
            layout="@layout/streaming_sources_displayer" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_searched_titles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayoutSubscribedStreamingSources" />

    <TextView
        android:id="@+id/tvHintToSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/explicit_search_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayoutSubscribedStreamingSources"/>

    <ImageView
        android:id="@+id/ivLoadingBrain"
        android:layout_width="138dp"
        android:layout_height="104dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/loading_brain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayoutSubscribedStreamingSources"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tvNoTitlesFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_titles_found"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayoutSubscribedStreamingSources"
        tools:visibility="visible"/>

    <ProgressBar
        android:id="@+id/paginationProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/md_theme_primary"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>